update & create new api ; change Dockerfile & docker-compose
