# docs/swagger.json
@@ -37,7 +37,9 @@
                 "summary": "Просмотр сертификатов",
                 "operationId": "get-all-certificates",
                 "responses": {}
-            },
+            }
+        },
+        "/api/certificates/add": {
             "post": {
                 "security": [
                     {
@@ -63,7 +65,40 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ttlchecker.Certificate"
+                            "$ref": "#/definitions/handler.AddCertificateRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/certificates/check": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Проверка сертификата",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "certificate"
+                ],
+                "summary": "Проверка сертификата",
+                "operationId": "check-certificate",
+                "parameters": [
+                    {
+                        "description": "URL для проверки",
+                        "name": "url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.checkCertificateInfoRequest"
                         }
                     }
                 ],
@@ -188,19 +223,24 @@
         }
     },
     "definitions": {
-        "ttlchecker.Certificate": {
+        "handler.AddCertificateRequest": {
             "type": "object",
+            "required": [
+                "url"
+            ],
             "properties": {
                 "url": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                },
-                "valid_from": {
-                    "type": "string"
-                },
-                "valid_to": {
+                }
+            }
+        },
+        "handler.checkCertificateInfoRequest": {
+            "type": "object",
+            "required": [
+                "url"
+            ],
+            "properties": {
+                "url": {
                     "type": "string"
                 }
             }
